fix: bug in packege.json

--- a/sumOfOther/package.json
+++ b/sumOfOther/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "rsschool-codejam",
+  "name": "sumofother",
   "version": "1.0.0",
   "description": "\"sumOfOther\"",
-  "main": "sumOfOther.js",
+  "main": "test.js",
   "scripts": {
     "test": "mocha"
   },
@@ -10,14 +10,13 @@
     "type": "git",
     "url": "git+https://github.com/AlexandrTichon/rsschool-codejam.git"
   },
-  "author": "AlexandrTichon",
+  "author": "https://github.com/AlexandrTichon",
   "license": "ISC",
   "bugs": {
     "url": "https://github.com/AlexandrTichon/rsschool-codejam/issues"
   },
   "homepage": "https://github.com/AlexandrTichon/rsschool-codejam#readme",
   "devDependencies": {
-    "eslint": "^5.8.0",
     "eslint-config-airbnb-base": "^13.1.0",
     "mocha": "^5.2.0"
   }
